# 3d-print-manager

./: .env.example  .gitignore  README.md  app.py  desktop_launcher.py  docker-compose.yml  launcher.py  main.py  pyproject.toml  requirements.txt  web_launcher.py
.streamlit/: config.toml
assets/: style.css
database/: db.py
pages/: 1_Dashboard.py  2_Rules.py  3_Print_Jobs.py  4_Costs.py  5_Sales.py
routers/: _templates.py  costs.py  dashboard.py  jobs.py  rules.py  sales.py
static/css/: style.css
static/js/: app.js
templates/: base.html  costs.html  dashboard.html  error.html  jobs.html  rules.html  sales.html
utils/: helpers.py
